--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "description": "Type as you do in text editor, but generate markup. And vice-versa",
     /*"background": {
         "persistent": false,
-        "scripts": ["popup.js"]
+        "scripts": ["init.js"]
     },*/
     "browser_action": {
         "default_icon": "icon.png",
