--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "jquery": "^3.0.0",
+    "showdown": "^1.4.2",
     "tinymce": "^4.4.0",
     "to-markdown": "^3.0.1"
   }
